--- a/CSS/components/menu.css
+++ b/CSS/components/menu.css
@@ -6,7 +6,6 @@
 .patrimoine-details {
     width: 100%;
     height: 100%;
-    min-height: 500px;
 }
 
 .patrimoine-hidden {
