--- a/CSS/components/resto.css
+++ b/CSS/components/resto.css
@@ -14,7 +14,7 @@
 }
 
 .card-resto h2 {
-  font-size: 25px;
+  font-size: 25px !important;
   font-weight: bold;
   margin: 0;
   padding: 5px 10px;
