--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,8 +27,8 @@ h1 {
 h2{
     font-size: 45px !important;
     z-index: -1;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     font-family: 'Amatic SC', cursive;
 }
 
@@ -66,7 +66,8 @@ p {
     background-size: cover;
     width: 100%;
     position: relative;
-    margin: 35px 0px;
+    margin-top: 40px;
+    margin-bottom: 10px;
 }
 
 
